--- a/meu-portfolio/.github/workflows/deploy.yml
+++ b/meu-portfolio/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Nuxt.js to GitHub Pages
+name: Deploy Next.js to GitHub Pages
 
 on:
   push:
@@ -22,10 +22,10 @@ jobs:
         run: npm ci
 
       - name: Build 🏗️
-        run: npm run generate
+        run: npm run build
 
       - name: Deploy 🚀
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist # This is the default output directory for Nuxt.js static exports 
+          publish_dir: ./out # This is the default output directory for Next.js static exports 
